feat: add info to readme.md, finish refactoring print_receipt notebook and script.py

--- a/notebooks/print_receipt-refactor.ipynb
+++ b/notebooks/print_receipt-refactor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,78 +30,49 @@
     "    with open(filename) as f:\n",
     "        content = f.readlines()\n",
     "    # you may also want to remove whitespace characters like `\\n` at the end of each line\n",
-    "    content = [x.strip() for x in content] "
+    "    content = [x.strip() for x in content] \n",
+    "    return content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use natural language processing toolkit (nltk)\n",
-    "# write a list of common food items\n",
-    "from nltk.corpus import wordnet as wn\n",
-    "food = wn.synset('food.n.02')\n",
-    "food_list = list(set([w for s in food.closure(lambda s:s.hyponyms()) for w in s.lemma_names()]))"
+    "def exempt_words():\n",
+    "    # use natural language processing toolkit (nltk)    \n",
+    "    from nltk.corpus import wordnet as wn\n",
+    "    \n",
+    "    # write a list of common food items\n",
+    "    food = wn.synset('food.n.02')\n",
+    "    food_list = list(set([w for s in food.closure(lambda s:s.hyponyms()) for w in s.lemma_names()]))\n",
+    "    more_food = [\"chocolates\"]\n",
+    "    food_list = food_list + more_food\n",
+    "    \n",
+    "    # write a list of medicine items\n",
+    "    medicine = wn.synset('medicine.n.02')\n",
+    "    med_list = list(set([w for s in medicine.closure(lambda s:s.hyponyms()) for w in s.lemma_names()]))\n",
+    "    \n",
+    "    # add more keywords to medicine items list\n",
+    "    more_meds = [\"pills\", \"headache\",\"heartburn\", \"aspirine\"]\n",
+    "    med_list = med_list + more_meds\n",
+    "    \n",
+    "    # write a list of book related words\n",
+    "    book = wn.synset('book.n.01')\n",
+    "    books_list = list(set([w for s in book.closure(lambda s:s.hyponyms()) for w in s.lemma_names()]))\n",
+    "    \n",
+    "    more_books = [\"book\", \"books\", \"BOOK\", \"BOOKS\"]\n",
+    "    books_list = books_list + more_books\n",
+    "    \n",
+    "    exemptions = books_list + med_list + food_list\n",
+    "    \n",
+    "    return exemptions    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "more_food = [\"chocolates\"]\n",
-    "food_list = food_list + more_food"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write a list of medicine items\n",
-    "medicine = wn.synset('medicine.n.02')\n",
-    "med_list = list(set([w for s in medicine.closure(lambda s:s.hyponyms()) for w in s.lemma_names()]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# add more keywords to medicine items list\n",
-    "more_meds = [\"pills\", \"headache\",\"heartburn\", \"aspirine\"]\n",
-    "med_list = med_list + more_meds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write a list of book related words\n",
-    "book = wn.synset('book.n.01')\n",
-    "books_list = list(set([w for s in book.closure(lambda s:s.hyponyms()) for w in s.lemma_names()]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "more_books = [\"book\", \"books\", \"BOOK\", \"BOOKS\"]\n",
-    "books_list = books_list + more_books"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,9 +96,12 @@
     "        (Boolean) True if description contains an exempted word or False otherwise.    \n",
     "    \"\"\"\n",
     "    checks = []\n",
+    "    \n",
+    "    exemptions = exempt_words()\n",
+    "    \n",
     "    # Check if description has any word from the exempt lists\n",
     "    for item in item_description:\n",
-    "        if item in med_list or item in food_list or item in books_list:\n",
+    "        if item in exemptions:\n",
     "            checks.append(True)\n",
     "        else:\n",
     "            checks.append(False)\n",
@@ -140,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +207,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"../test_case3.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content = read_text(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -252,6 +244,13 @@
    "source": [
     "tax(content)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
