--- a/notebooks/salestax.ipynb
+++ b/notebooks/salestax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,29 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filename = \"../test_case3.txt\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_text(filename):\n",
-    "    with open(filename) as f:\n",
-    "        content = f.readlines()\n",
-    "    # you may also want to remove whitespace characters like `\\n` at the end of each line\n",
-    "    content = [x.strip() for x in content] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,17 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "more_food = [\"chocolates\"]\n",
-    "food_list = food_list + more_food"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,18 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "# round to nearest 0.05\n",
-    "def round_to_next(val, step):\n",
-    "    return val - (val % step) + (step if val % step != 0 else 0)"
+    "def round_nearest(x, a):\n",
+    "    return round(round(x / a) * a, -int(math.floor(math.log10(a))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,23 +92,17 @@
     "    Returns:\n",
     "        (Boolean) True if description contains an exempted word or False otherwise.    \n",
     "    \"\"\"\n",
-    "    checks = []\n",
-    "    # Check if description has any word from the exempt lists\n",
+    "    # TODO: Check if description has any word from the medicine list\n",
     "    for item in item_description:\n",
     "        if item in med_list or item in food_list or item in books_list:\n",
-    "            checks.append(True)\n",
+    "            return True\n",
     "        else:\n",
-    "            checks.append(False)\n",
-    "    if any(checks) == True:\n",
-    "        return True\n",
-    "    else: \n",
-    "        return False\n",
-    "        "
+    "            return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +124,8 @@
     "    # regular expression pattern\n",
     "    pattern = \"-?([0-9]\\d*\\.?\\d*)\"\n",
     "    \n",
-    "    # loop through elements of list    \n",
+    "    # TODO: loop through elements of list\n",
+    "    \n",
     "    for text in text_list:\n",
     "\n",
     "        # Initialize tax percentage variable\n",
@@ -179,78 +142,65 @@
     "            item_match.pop(len(item_match)-1)\n",
     "\n",
     "        # Compare regex to exempt lists (Books, FOOD, Medical products)\n",
-    "        if is_exempt(item_match) == False:            \n",
-    "            is_taxable = True            \n",
+    "        if is_exempt(item_match) == False:\n",
+    "            tax += 0.1 # 10%    \n",
     "        else:\n",
     "            # for debugging\n",
-    "            is_taxable = False\n",
+    "            print(\"tax exempt\")\n",
     "\n",
     "        # Import duty tax +5%\n",
     "        if \"imported\" in item_match or \"IMPORTED\" in item_match == True:\n",
-    "            is_imported = True            \n",
-    "        else:\n",
-    "            is_imported = False            \n",
-    "            \n",
-    "        # Calculate tax %\n",
-    "        if is_taxable and is_imported: \n",
-    "            tax = 0.15 # 10%    \n",
-    "            #print(\"15% tax\", tax) \n",
-    "        elif is_taxable: \n",
-    "            tax = 0.1 # 10%    \n",
-    "            #print(\"10% tax\", tax)            \n",
-    "        elif is_imported:\n",
-    "            tax = 0.05 # Add 5% to item tax\n",
-    "            #print(\"5% tax\", tax)\n",
-    "        else:\n",
-    "            # for debugging\n",
-    "            tax = 0\n",
-    "            #print(\"Tax exempt\",tax)\n",
-    "            \n",
-    "        # Calculate sales tax\n",
-    "        sales_tax = round_to_next(tax * price,0.05)\n",
+    "            tax += 0.05 # Add 5% to item tax\n",
+    "\n",
+    "        # TODO: Calculate sales tax\n",
+    "        sales_tax = round_nearest(tax * price, 0.05)\n",
     "        total_taxes += sales_tax\n",
-    "        #print(\"taxes\", total_taxes)\n",
-    "                \n",
-    "        taxed_price = price + sales_tax\n",
-    "        #print(\"taxed price\", taxed_price)\n",
-    "                \n",
-    "        taxed_price = taxed_price\n",
     "        \n",
-    "        total += qty * taxed_price\n",
+    "        price += qty * sales_tax\n",
+    "        \n",
+    "        total += round(qty * price,2)\n",
     "\n",
     "        # Join item description using list comprehension\n",
     "        item_description = \" \".join(map(str, item_match))\n",
     "    \n",
     "        # print parsed item information\n",
-    "        print(f'{qty:.0f} {item_description}: {taxed_price:.2f}')\n",
+    "        print(qty, item_description,\":\", price)\n",
     "    \n",
-    "    #total_taxes = round_nearest(total_taxes, 0.05)\n",
-    "    \n",
-    "    print(f'Sales Taxes: {total_taxes:.2f}')\n",
-    "    print(f'Total: {total:.2f}')\n",
+    "    print(\"Sales Taxes:\", total_taxes)\n",
+    "    print(\"Total:\", total)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = [\"1 book at 12.49\", \"1 music CD at 14.99\", \"1 chocolate bar at 0.85\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 imported bottle of perfume: 32.19\n",
-      "1 bottle of perfume: 20.89\n",
-      "1 packet of headache pills: 9.75\n",
-      "1 box of imported chocolates: 11.85\n",
-      "Sales Taxes: 6.70\n",
-      "Total: 74.68\n"
+      "tax exempt\n",
+      "1 book : 12.49\n",
+      "1 music CD : 16.490000000000002\n",
+      "tax exempt\n",
+      "1 chocolate bar : 0.85\n",
+      "Sales Taxes: 1.5\n",
+      "Total: 29.83\n"
      ]
     }
    ],
    "source": [
-    "tax(content)"
+    "tax(text)"
    ]
   }
  ],
